2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39794: warnings when building avrdude 6.0rc1 under CentOS 6.4
	* buspirate.c: Turn the "cmd" argument of the various methods into
	a "const unsigned char *"; while doing this, declare all arrays being
	passed as arguments to be pointers rather than arrays, as the latter
	obfuscates the way arrays are being passed to a callee in C.
	* avrftdi.c: (Dito.)
	* pickit2.c: (Dito.)
	* ft245r.c: (Dito.)
	* avr910.c: (Dito.)
	* stk500.c: (Dito.)
	* bitbang.c: (Dito.)
	* bitbang.h: (Dito.)
	* avrftdi_tpi.c: (Dito.)
	* avrftdi_tpi.h: (Dito.)
	* usbasp.c: (Dito.)
	* stk500v2.c: (Dito.)
	* pgm.h: (Dito.)
	* usbtiny.c: (Dito.)

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38023: avrdude doesn't return an error code when attempting
	to upload an invalid Intel HEX file
	* fileio.c (ihex2b): Turn the "No end of file record found" warning
	into an error if no valid record was found at all.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Claus-Justus Heine:
	bug #38713: Compilation of the documentation breaks with texinfo-5
	* doc/avrdude.texi: Turn @itemx into @item, add @headitem to STK600
	Routing/Socket card table

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c: Add trace output for -vvv to non-TPI functions, too.

2013-09-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c (usbasp_tpi_paged_load): Calculate correct
	buffer address.
	* usbasp.c (usbasp_tpi_paged_write): Calculate correct
	buffer address; don't issue a SECTION_ERASE command for
	each page (a CHIP_ERASE has been done before anyway);
	remove the code that attempted to handle partial page
	writes, as all writes are now done with a full page.

2013-09-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c: Add more trace output, by now only for the TPI
	functions.

2013-08-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* usbasp.c (usbasp_transmit): Add -vvvv trace output.
